2006-12-25  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/install-sh (initialize_posix_glob): New var.
	Use it instead of setting posix_glob inline.
	(posix_glob): Use '?'/''/: instead of ''/yes/no, for convenience.
	(cmpprog, CMPPROG): New vars, since we use cmp rather than the diff
	of Akim's patch.
	Use LC_ALL before invoking 'ls' when we depend on its output format.
	Don't use awk; just use the shell's builtin features.
	Clean up $dsttmp if -C detects no installation is needed.
	* tests/defs.in (is_newest): Renamed from is_younger; the new
	name is more accurate.  All uses changed.
	(old_timestamp): New var.
	* tests/instsh2.test: Rewrite to avoid the need for sleeping.

2006-12-25  Akim Demaille  <akim@epita.fr>

	* lib/install-sh: Implement install-sh -C.
	(This patch is the remaining part of the patch proposed in
	<http://lists.gnu.org/archive/html/automake-patches/2006-10/msg00077.html>.)
	(usage): Document it.
	(copy_on_change): New var.
	* tests/defs.in (is_younger): New function.
	* tests/instsh2.test: Check install-sh -C.

2006-12-24  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/install-sh: Fix typo in previous patch for handling --.
	Use more-consistent style for ';;'.
	Prefer || to if-then-else-:.
	* tests/install2.test: Rework to avoid set -e problems.

2006-12-24  Akim Demaille  <akim@epita.fr>

	Simplify install-sh and its test.  This shouldn't change any behavior.
	(This patch is a subset of the patch proposed in
	<http://lists.gnu.org/archive/html/automake-patches/2006-10/msg00077.html>.)
	* lib/install-sh (usage): Use usual GNU style.
	(dstarg): Rename as...
	(dst_arg): this for consistency.
	Simplify quoting of assignments.
	Sort them.
	Don't use '\' to continue commands: && suffices.
	Remove useless "continue" in the argument processing,
	and factor the shifts.
	* tests/defs.in: Some improvements to make it set -e clean.
	Use the traditional ":" trick to protect loops from being empty.
	Remove an empty straightforward piece of code prepared to define