@@ -11,6 +11,10 @@ New in 1.10a:
 * Miscellaneous changes:
 
   - New shorthand `$(pkglibexecdir)' for `$(libexecdir)/@PACKAGE@'.
+
+  - install-sh supports -C, which does not update the installed file
+    (and its time stamps) if the contents did not change.
+
 
 New in 1.10:
 
