@@ -1,3 +1,8 @@
+2007-01-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/defs.in (is_newest): Cope with multiple newer files.
+	* NEWS: mention `install-sh -C'.
+
 2006-12-25  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* lib/install-sh (initialize_posix_glob): New var.
